supervisor-macros/tests/ui/compile_fail/resources_without_task.stderr
error: `resources:` requires `task:` — resources are handed to the generated shell as owned arguments and restored by it; a `spawn:` task fn manages its own arguments
  --> tests/ui/compile_fail/resources_without_task.rs:13:9
   |
13 |         resources: [LED: FakeLed];
   |         ^^^^^^^^^
